# sfml-image-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: window.h
src/: main.cpp  window.cpp
